--- a/index.html
+++ b/index.html
@@ -13,6 +13,40 @@
     </header>
     <main>
       <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The footer element is visible content at the bottom of the page</li>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>CSS is the "styling" of the webpage</li>
+          <li>CSS styling includes Text font, color, backgrounds, spacing, animations, and much more decorative features.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git push sends code from the editor into the repository</li>
+        </ul>
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>JavaScript is the most widely used coding language</li>
+          <li>Javasript is used mainly for websites and browsers</li>
+          <li>JavaScript is unlike other coding languages because does not have a "compile step"</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
